examples/test/testpolicy14642.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14642
  namespace: namespace155
spec:
  podSelector:
    matchLabels:
      key12: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value17
          key35: value30
          key30: value7
      podSelector:
        matchLabels:
          key37: value17
          key4: value27
          key47: value44
